# pptx-lint

./: .gitignore  .pypirc.example  CHANGELOG.md  LICENSE  PUBLISH_PLAN.md  README.md  pyproject.toml
.github/workflows/: test.yml
src/pptx_lint/: __init__.py  checker.py  cli.py  utils.py
src/pptx_lint/reporters/: __init__.py  console.py
src/pptx_lint/rules/: __init__.py  fake_table.py  font_size.py  overflow.py  overlap.py
tests/: test_checker.py
