[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pptx-lint"
version = "0.1.0"
description = "Lint / quality checker for python-pptx presentations — detects overflow, overlap, fake tables, small fonts, and empty slides"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "python-pptx>=0.6.21",
]
keywords = ["pptx", "powerpoint", "lint", "quality", "python-pptx", "presentation"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
pptx-lint = "pptx_lint.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
